<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Game of Thrones Info</string>
    <string name="bornText">Born : %s</string>
    <string name="genderText">Gender  : %s</string>
    <string name="kingdomText">Kingdom  : %s</string>
    <string name="fatherText">Father : %s</string>
    <string name="motherText">Mother : %s</string>
    <string name="deadText">Dead : %s</string>
    <string name="aliases">Aliases :</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_characters">Characters</string>
    <string name="language_title">Language</string>
    <string name="english_title">English</string>
    <string name="russian_title">Russian</string>
    <string name="remote_data_source_title">Remote Data</string>
    <string name="local_data_source_title">Local Data</string>
    <string name="source_type_title">Data Source</string>
    <string name="languages_list_key" translatable="false">languages_list</string>
    <string name="data_sources_key" translatable="false">data_sources</string>
    <string name="exportDataButtonTitle">Export From Database</string>
    <string name="exportButtonKey" translatable="false">exportButtonKey</string>
    <string name="search" translatable="false">Search</string>
    <string name="permanentSaveCheckBoxTitle">Permanent Save</string>
    <string name="permanentSaveCheckbox" translatable="false">permanentSaveCheckbox</string>
    <string name="permanentSaveCheckboxDescription">Chose this option to enable "SOR" technology (Save on Response). When it enable your data will be saved in DB immediately as response achieve</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="drawer_open">open_drawer</string>
    <string name="drawer_close">close_drawer</string>
</resources>
